# vgd-rm2022-Buff

./: CMakeLists.txt  big_dick_energy.cpp  big_dick_energy.h  define.h  main.cpp  predictor.cpp  predictor.h
